EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/13/2009==
Derision: Implemented SE_PercentXPIncrease and Resist caps.
Trevius: Removing an Illusion should now restore all features to their original settings in most cases.
Trevius: SoF - Adjusted Power Source code some to remove a bug with using the slot.

==06/12/2009==
Trevius: The #nukeitem command and related quest commands is now able to remove items on the cursor and within bag slots of the cursor.
Trevius: SoF - The Power Source Slot is now a usable slot.  Items set to use slot 22 in the items table will be able to use this new slot.
KLS: On successful completion of an adventure players should be removed from the adventure immediately instead of after 30 minutes.

==06/11/2009==
AndMetal: Rule values can be viewed and modified through the web interface. They're updated into the database only, so they won't go into effect until you restart the server.

==06/10/2009==
realityincarnate: Added /makeleader command functionality
realityincarnate: Non-leaders can no longer kick members from the group
KLS: Added $zoneweather perl export

==06/09/2009==
Trevius: Added rule Combat:ArcheryStationaryPenalty to allow adjustment of the Archery damage penalty for moving or rooted targets.
KLS: Backstab tweak again.
KLS: Added Perl commands: GetItemAt(slot), GetAugmentAt(slot, aug_slot) both returning type ItemInst usable from the Client object.
KLS: Added Perl command: IsType() for use on the ItemInst object.

Optional SQL: \utils\sql\svn\646_archery_penalty_rule.sql

==06/08/2009==
KLS(realityincarnate): Charms: Added charm item scaling with scriping support and initial work on evolving items.
KLS(realityincarnate): Added perl method $client->GetModCharacterFactionLevel(FactionID)
KLS(realityincarnate): Added perl method $group->GetMember(index)
KLS: Added perl method $client->GetLDoNWins()
KLS: Added perl method $client->GetLDoNLosses()